refactor(Gian): simplify specialty list retrieval by using toList()